# attendance

./: .gitignore  README.md  details.md  plan.md
esp32_firmware/: config.h  platformio.ini
esp32_firmware/esp32_attendance/: esp32_attendance.ino
py-backend/: .env.example  .gitignore  README.md  app.py  config.py  models.py  pyproject.toml  run.py
py-backend/api/: __init__.py  admin.py  attendance.py  device.py  session.py  students.py  teacher.py
py-backend/email_service/: __init__.py  sender.py
py-backend/face_recognition/: __init__.py  detector.py  embedders.py  service.py  utils.py
py-backend/instance/: attendance.db
py-backend/scripts/: _simulator_common.py  clear_database.py  convert_scrfd_to_onnx.sh  run_dummy_sensor_flow.py  run_embedder_benchmark.py  scrfd2onnx.py  scrfd_34g_auto_config.py  scrfd_34g_export_config.py  scrfd_export_compat.py  seed_sample_data.py  simulate_esp32_camera.py  simulate_rfid_sensor.py
py-backend/services/: __init__.py  attendance_service.py  data_management.py  runtime.py
py-backend/static/css/: dashboard.css
py-backend/static/js/: dashboard.js
py-backend/templates/: index.html
py-backend/tests/: conftest.py  test_end_to_end_integration.py  test_sensor_api.py
py-backend/utils/: image_tools.py
report/: report.aux  report.lof  report.lot  report.out  report.tex  report.toc
scripts/: backend_benchmark.sh  backend_check_models.sh  backend_clean.sh  backend_convert_scrfd.sh  backend_up.sh  project_clean.sh
